# qwen-air-qpu-mcp-lab

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  MOONSHOT_LIST.md  README.md  SECURITY.md  config.example.json  pyproject.toml  requirements.txt
data/: 20260526-094934-routercensus-multiprompt.json  20260526-094934-routercensus-multiprompt.md  moonshot_prompt.cache  moonshot_suffix_corpus.json
docs/: ARXIV_AND_DOI.md  COMMUNITY_VALIDATION.md  HUGGINGFACE_BLOG_DRAFT.md  PRESS_KIT.md  PUBLISHING_CHECKLIST.md  RELEASE_NOTES_v0.1-preprint.md  REPRODUCIBILITY.md  RESULTS.md
paper/: README.md  make_figures.py  quantum_enhanced_legacy_moe_inference.html  quantum_enhanced_legacy_moe_inference.md
qpu_mcp_lab/: __init__.py  bench.py  cli.py  config.py  db.py  objective.py  optimizer.py  qpu_strategy.py  quantum.py  server.py
scripts/: build_arxiv_pdf.py  build_preprint.py  checkpoint_stack_drive.py  codex_off_cleanroom.sh  coherent_record_lottery.py  export_public_sqlite.py  impl_flags_drive.py  llama_taskpolicy.sh  metal_hybrid_sidequest.py  moonshot_drive.py  moonshot_micro_ridge_drive.py  moonshot_refine_drive.py  phase_boundary_mapper.py  qpu2_stack_drive.py  qpu_candidate_strict_probe.py  qpu_record_drive.py  quality_safe_ridge_next.py  record_climb_protocol.py  record_edge_knob_drive.py  record_lane_supernova2.py  record_lane_sweep.py  record_recovery_push.py  ridge_v2_drive.py  router_path_prompt_probe.py  routercensus_adaptive_undervolt_drive.py  routercensus_multi_prompt.py  routercensus_protective_subnet_drive.py  routercensus_rescue_drive.py  (+26 more)
(+12 files in other folders)
